RESOLVED FIXED3280
With LEGEND element, align=right value is not supported
https://bugs.webkit.org/show_bug.cgi?id=3280
Summary With LEGEND element, align=right value is not supported
Chris Petersen
Reported 2005-06-05 19:17:55 PDT
Expected Results: The LEGEND element should support align =right What I got: LEGEND text is still displayed as left aligned Stesp to reproduce: 1) Open "legend_align_right.html" in Safari 2.0 (v412) under 10.4.1 (8B15) 2) Notice the legend text 'California Major Cities' is left aligned instead of right aligned in the fieldset element. Note : This is correctly rendered in Mac Firefox 1.0.4
Attachments
Sample LEGEND test case that uses align=right (612 bytes, text/html)
2005-06-05 19:20 PDT, Chris Petersen
no flags
Chris Petersen
Comment 1 2005-06-05 19:20:38 PDT
Created attachment 2114 [details] Sample LEGEND test case that uses align=right
Chris Petersen
Comment 2 2005-06-07 11:29:37 PDT
Eric Seidel (no email)
Comment 3 2005-12-27 14:11:51 PST
Still a bug in TOT.
David Kilzer (:ddkilzer)
Comment 4 2006-12-04 02:46:14 PST
Fix committed in r17995 by rwlbuis. See also Bug 11544.
Note You need to log in before you can comment on or make changes to this bug.