        Reviewed by dhyatt.

Patch by pmax.

        http://bugs.webkit.org/show_bug.cgi?id=3280
        With LEGEND element, align=right value is not supported
        http://bugs.webkit.org/show_bug.cgi?id=11544
        <legend> rendering doesn't take align into account

        Allow aligning for legends in both RTL and LTR mode.



Canonical link: https://commits.webkit.org/15101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17995 268f45cc-cd09-0410-ab3c-d52691b4dbfc